--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Enriqeu Labrada</li>
+							<li>&copy; Enrique Labrada</li>
 						</ul>
 					</footer>
 
