--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
 						<header>
 							
 							<h1>Enrique Labrada</h1>
-							<p>Coming Soon</p>
+							<p>
+					Where you can see my work
+					<ul>
+						<li> <a href="https://dribbble.com/enriquelabrada">Dribble</a></li>
+						<li>  <a href="https://twitter.com/thisisiostudio">Twitter</a>  </li>
+						<li>  <a href="https://www.behance.net/enriquelabrada">Behance</a> </li>
+						<li> <a href="https://vsco.co/elabrada/images/1">VSCO</a></li>
+						<li> <a href="https://iostudio.io">Website In Progress</a></li>
+			
+				</ul>
+				</p>
 						</header>
 						<!--
 						<hr />
@@ -56,19 +66,13 @@
 						</form>
 						<hr />
 						-->
-						<footer>
-							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
-							</ul>
-						</footer>
+						
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Enrique Labrada</li>
+							<li>&copy; 2019, Enrique Labrada</li>
 						</ul>
 					</footer>
 
